YarnSpinner.Tests/TestPlan/YarnSpinnerTestPlanParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/desplesda/Work/YarnSpinner/YarnSpinner.Tests/TestPlan/YarnSpinnerTestPlan.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Yarn.Compiler {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class YarnSpinnerTestPlanParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, COMMENT=15, WS=16, BOOL=17, 
		IDENTIFIER=18, HASHTAG_CONTENT=19, VARIABLE=20, NUMBER=21, TEXT=22;
	public const int
		RULE_testplan = 0, RULE_run = 1, RULE_environment = 2, RULE_start = 3, 
		RULE_step = 4, RULE_hashtag = 5, RULE_lineExpected = 6, RULE_optionExpected = 7, 
		RULE_commandExpected = 8, RULE_stopExpected = 9, RULE_actionSelect = 10, 
		RULE_actionSet = 11, RULE_actionSetSaliencyMode = 12, RULE_actionJumpToNode = 13;
	public static readonly string[] ruleNames = {
		"testplan", "run", "environment", "start", "step", "hashtag", "lineExpected", 
		"optionExpected", "commandExpected", "stopExpected", "actionSelect", "actionSet", 
		"actionSetSaliencyMode", "actionJumpToNode"
	};

	private static readonly string[] _LiteralNames = {
		null, "'---'", "'environment:'", "'start:'", "'line:'", "'*'", "'option:'", 
		"'[disabled]'", "'command:'", "'stop'", "'select:'", "'set:'", "'='", 
		"'saliency:'", "'node:'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "COMMENT", "WS", "BOOL", "IDENTIFIER", "HASHTAG_CONTENT", 
		"VARIABLE", "NUMBER", "TEXT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "YarnSpinnerTestPlan.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static YarnSpinnerTestPlanParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public YarnSpinnerTestPlanParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public YarnSpinnerTestPlanParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class TestplanContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public RunContext[] run() {
			return GetRuleContexts<RunContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public RunContext run(int i) {
			return GetRuleContext<RunContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(YarnSpinnerTestPlanParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public EnvironmentContext environment() {
			return GetRuleContext<EnvironmentContext>(0);
		}
		public TestplanContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_testplan; } }
	}

	[RuleVersion(0)]
	public TestplanContext testplan() {
		TestplanContext _localctx = new TestplanContext(Context, State);
		EnterRule(_localctx, 0, RULE_testplan);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 31;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__1) {
				{
				State = 28;
				environment();
				State = 29;
				Match(T__0);
				}
			}

			State = 33;
			run();
			State = 38;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__0) {
				{
				{
				State = 34;
				Match(T__0);
				State = 35;
				run();
				}
				}
				State = 40;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 41;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RunContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StartContext start() {
			return GetRuleContext<StartContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StepContext[] step() {
			return GetRuleContexts<StepContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StepContext step(int i) {
			return GetRuleContext<StepContext>(i);
		}
		public RunContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_run; } }
	}

	[RuleVersion(0)]
	public RunContext run() {
		RunContext _localctx = new RunContext(Context, State);
		EnterRule(_localctx, 2, RULE_run);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__2) {
				{
				State = 43;
				start();
				}
			}

			State = 47;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 46;
				step();
				}
				}
				State = 49;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 28496L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnvironmentContext : ParserRuleContext {
		public IToken contextName;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(YarnSpinnerTestPlanParser.IDENTIFIER, 0); }
		public EnvironmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_environment; } }
	}

	[RuleVersion(0)]
	public EnvironmentContext environment() {
		EnvironmentContext _localctx = new EnvironmentContext(Context, State);
		EnterRule(_localctx, 4, RULE_environment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 51;
			Match(T__1);
			State = 52;
			_localctx.contextName = Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StartContext : ParserRuleContext {
		public IToken nodeName;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(YarnSpinnerTestPlanParser.IDENTIFIER, 0); }
		public StartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_start; } }
	}

	[RuleVersion(0)]
	public StartContext start() {
		StartContext _localctx = new StartContext(Context, State);
		EnterRule(_localctx, 6, RULE_start);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			Match(T__2);
			State = 55;
			_localctx.nodeName = Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StepContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LineExpectedContext lineExpected() {
			return GetRuleContext<LineExpectedContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OptionExpectedContext optionExpected() {
			return GetRuleContext<OptionExpectedContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandExpectedContext commandExpected() {
			return GetRuleContext<CommandExpectedContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StopExpectedContext stopExpected() {
			return GetRuleContext<StopExpectedContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ActionSelectContext actionSelect() {
			return GetRuleContext<ActionSelectContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ActionSetContext actionSet() {
			return GetRuleContext<ActionSetContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ActionJumpToNodeContext actionJumpToNode() {
			return GetRuleContext<ActionJumpToNodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ActionSetSaliencyModeContext actionSetSaliencyMode() {
			return GetRuleContext<ActionSetSaliencyModeContext>(0);
		}
		public StepContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_step; } }
	}

	[RuleVersion(0)]
	public StepContext step() {
		StepContext _localctx = new StepContext(Context, State);
		EnterRule(_localctx, 8, RULE_step);
		try {
			State = 65;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__3:
				EnterOuterAlt(_localctx, 1);
				{
				State = 57;
				lineExpected();
				}
				break;
			case T__5:
				EnterOuterAlt(_localctx, 2);
				{
				State = 58;
				optionExpected();
				}
				break;
			case T__7:
				EnterOuterAlt(_localctx, 3);
				{
				State = 59;
				commandExpected();
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 4);
				{
				State = 60;
				stopExpected();
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 5);
				{
				State = 61;
				actionSelect();
				}
				break;
			case T__10:
				EnterOuterAlt(_localctx, 6);
				{
				State = 62;
				actionSet();
				}
				break;
			case T__13:
				EnterOuterAlt(_localctx, 7);
				{
				State = 63;
				actionJumpToNode();
				}
				break;
			case T__12:
				EnterOuterAlt(_localctx, 8);
				{
				State = 64;
				actionSetSaliencyMode();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HashtagContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HASHTAG_CONTENT() { return GetToken(YarnSpinnerTestPlanParser.HASHTAG_CONTENT, 0); }
		public HashtagContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_hashtag; } }
	}

	[RuleVersion(0)]
	public HashtagContext hashtag() {
		HashtagContext _localctx = new HashtagContext(Context, State);
		EnterRule(_localctx, 10, RULE_hashtag);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			Match(HASHTAG_CONTENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineExpectedContext : ParserRuleContext {
		public LineExpectedContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lineExpected; } }
	 
		public LineExpectedContext() { }
		public virtual void CopyFrom(LineExpectedContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class LineWithAnyTextExpectedContext : LineExpectedContext {
		[System.Diagnostics.DebuggerNonUserCode] public HashtagContext[] hashtag() {
			return GetRuleContexts<HashtagContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HashtagContext hashtag(int i) {
			return GetRuleContext<HashtagContext>(i);
		}
		public LineWithAnyTextExpectedContext(LineExpectedContext context) { CopyFrom(context); }
	}
	public partial class LineWithSpecificTextExpectedContext : LineExpectedContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXT() { return GetToken(YarnSpinnerTestPlanParser.TEXT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public HashtagContext[] hashtag() {
			return GetRuleContexts<HashtagContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HashtagContext hashtag(int i) {
			return GetRuleContext<HashtagContext>(i);
		}
		public LineWithSpecificTextExpectedContext(LineExpectedContext context) { CopyFrom(context); }
	}

	[RuleVersion(0)]
	public LineExpectedContext lineExpected() {
		LineExpectedContext _localctx = new LineExpectedContext(Context, State);
		EnterRule(_localctx, 12, RULE_lineExpected);
		int _la;
		try {
			State = 85;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				_localctx = new LineWithSpecificTextExpectedContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 69;
				Match(T__3);
				State = 70;
				Match(TEXT);
				State = 74;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==HASHTAG_CONTENT) {
					{
					{
					State = 71;
					hashtag();
					}
					}
					State = 76;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 2:
				_localctx = new LineWithAnyTextExpectedContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 77;
				Match(T__3);
				State = 78;
				Match(T__4);
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==HASHTAG_CONTENT) {
					{
					{
					State = 79;
					hashtag();
					}
					}
					State = 84;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OptionExpectedContext : ParserRuleContext {
		public IToken isDisabled;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXT() { return GetToken(YarnSpinnerTestPlanParser.TEXT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public HashtagContext[] hashtag() {
			return GetRuleContexts<HashtagContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HashtagContext hashtag(int i) {
			return GetRuleContext<HashtagContext>(i);
		}
		public OptionExpectedContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_optionExpected; } }
	}

	[RuleVersion(0)]
	public OptionExpectedContext optionExpected() {
		OptionExpectedContext _localctx = new OptionExpectedContext(Context, State);
		EnterRule(_localctx, 14, RULE_optionExpected);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			Match(T__5);
			State = 88;
			Match(TEXT);
			State = 92;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==HASHTAG_CONTENT) {
				{
				{
				State = 89;
				hashtag();
				}
				}
				State = 94;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 96;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__6) {
				{
				State = 95;
				_localctx.isDisabled = Match(T__6);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandExpectedContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXT() { return GetToken(YarnSpinnerTestPlanParser.TEXT, 0); }
		public CommandExpectedContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_commandExpected; } }
	}

	[RuleVersion(0)]
	public CommandExpectedContext commandExpected() {
		CommandExpectedContext _localctx = new CommandExpectedContext(Context, State);
		EnterRule(_localctx, 16, RULE_commandExpected);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98;
			Match(T__7);
			State = 99;
			Match(TEXT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StopExpectedContext : ParserRuleContext {
		public StopExpectedContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stopExpected; } }
	}

	[RuleVersion(0)]
	public StopExpectedContext stopExpected() {
		StopExpectedContext _localctx = new StopExpectedContext(Context, State);
		EnterRule(_localctx, 18, RULE_stopExpected);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			Match(T__8);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionSelectContext : ParserRuleContext {
		public IToken option;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(YarnSpinnerTestPlanParser.NUMBER, 0); }
		public ActionSelectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_actionSelect; } }
	}

	[RuleVersion(0)]
	public ActionSelectContext actionSelect() {
		ActionSelectContext _localctx = new ActionSelectContext(Context, State);
		EnterRule(_localctx, 20, RULE_actionSelect);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			Match(T__9);
			State = 104;
			_localctx.option = Match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionSetContext : ParserRuleContext {
		public ActionSetContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_actionSet; } }
	 
		public ActionSetContext() { }
		public virtual void CopyFrom(ActionSetContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ActionSetBoolContext : ActionSetContext {
		public IToken variable;
		public IToken value;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLE() { return GetToken(YarnSpinnerTestPlanParser.VARIABLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOL() { return GetToken(YarnSpinnerTestPlanParser.BOOL, 0); }
		public ActionSetBoolContext(ActionSetContext context) { CopyFrom(context); }
	}
	public partial class ActionSetNumberContext : ActionSetContext {
		public IToken variable;
		public IToken value;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VARIABLE() { return GetToken(YarnSpinnerTestPlanParser.VARIABLE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUMBER() { return GetToken(YarnSpinnerTestPlanParser.NUMBER, 0); }
		public ActionSetNumberContext(ActionSetContext context) { CopyFrom(context); }
	}

	[RuleVersion(0)]
	public ActionSetContext actionSet() {
		ActionSetContext _localctx = new ActionSetContext(Context, State);
		EnterRule(_localctx, 22, RULE_actionSet);
		try {
			State = 114;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,10,Context) ) {
			case 1:
				_localctx = new ActionSetBoolContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 106;
				Match(T__10);
				State = 107;
				((ActionSetBoolContext)_localctx).variable = Match(VARIABLE);
				State = 108;
				Match(T__11);
				State = 109;
				((ActionSetBoolContext)_localctx).value = Match(BOOL);
				}
				break;
			case 2:
				_localctx = new ActionSetNumberContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 110;
				Match(T__10);
				State = 111;
				((ActionSetNumberContext)_localctx).variable = Match(VARIABLE);
				State = 112;
				Match(T__11);
				State = 113;
				((ActionSetNumberContext)_localctx).value = Match(NUMBER);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionSetSaliencyModeContext : ParserRuleContext {
		public IToken saliencyMode;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(YarnSpinnerTestPlanParser.IDENTIFIER, 0); }
		public ActionSetSaliencyModeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_actionSetSaliencyMode; } }
	}

	[RuleVersion(0)]
	public ActionSetSaliencyModeContext actionSetSaliencyMode() {
		ActionSetSaliencyModeContext _localctx = new ActionSetSaliencyModeContext(Context, State);
		EnterRule(_localctx, 24, RULE_actionSetSaliencyMode);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 116;
			Match(T__12);
			State = 117;
			_localctx.saliencyMode = Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionJumpToNodeContext : ParserRuleContext {
		public IToken nodeName;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(YarnSpinnerTestPlanParser.IDENTIFIER, 0); }
		public ActionJumpToNodeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_actionJumpToNode; } }
	}

	[RuleVersion(0)]
	public ActionJumpToNodeContext actionJumpToNode() {
		ActionJumpToNodeContext _localctx = new ActionJumpToNodeContext(Context, State);
		EnterRule(_localctx, 26, RULE_actionJumpToNode);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119;
			Match(T__13);
			State = 120;
			_localctx.nodeName = Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
} // namespace Yarn.Compiler
